--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
@@ -23,7 +24,6 @@
     "mongoose": "^8.5.2",
     "pug": "^3.0.2",
     "sass": "^1.77.8"
-
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
